Templates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ms-demo
  name: service2-ms-demo
  namespace: ms-demo
spec:
  selector:
    app: ms-demo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
